--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@
 *.i*86
 *.x86_64
 *.hex
+*
 
 # Debug files
 *.dSYM/
@@ -53,4 +54,5 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+# Text Files
 *.txt
